# Numero

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  Numero.sln  Numero.vcxproj  Numero.vcxproj.filters  README.md  TechFriends.csv
.github/workflows/: build.yml  test.yml
numero/: entity.cpp  entity.h  group.cpp  group.h  holiday.cpp  holiday.h  numero.cpp  numero.h  time_unit.cpp  time_unit.h
test/: CMakeLists.txt  README.md  env.py  help.txt
test/t_1/: main.py
test/t_2/: main.py
test/t_3/: main.py
test/t_4/: main.py
